# isotope-informed-crn

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  test.yml
archive/: README.md  exp1_validate_stage3.py  kie_diagnosis.md  vendor-modifications.md
docs/: ARCHITECTURE.md  delta13c_investigation.md  experiments.md
notebooks/exploration/: 00_quick_start.ipynb  01_data_exploration.ipynb  02_rpfr_3d_visualization.ipynb
rmg_inputs/: propane_iso.py
rmg_inputs/goldmanm-RMG_isotopes_paper_data-234bd52/: replicate_figures.py
rmg_inputs/goldmanm-RMG_isotopes_paper_data-234bd52/mechanisms/drg_model/: chem.yaml
rmg_inputs/goldmanm-RMG_isotopes_paper_data-234bd52/mechanisms/full_model/: chem.yaml
rmg_inputs/goldmanm-RMG_isotopes_paper_data-234bd52/mechanisms/six_reaction_model/: chem.yaml
rmg_inputs/goldmanm-RMG_isotopes_paper_data-234bd52/mechanisms/three_reaction_model/: chem.yaml
rmg_pipeline/: compare_to_goldman.py  plot_figure6.py  replicate_table2.py  run_pipeline.py
src/isotopologue/: __init__.py  analysis.py  engine.py  goldman.py  kie.py  rmg_bridge.py  species.py
src/isotopologue/benchmarks/: __init__.py  propane.py
src/isotopologue/io/: __init__.py
src/rpfr_gui/: __init__.py
src/rpfr_gui/data/: __init__.py  chemistry_resolver.py  providers.py
src/rpfr_gui/domain/: __init__.py  isotope_graph.py
src/rpfr_gui/ui/: __init__.py  visualization.py
tests/: __init__.py  conftest.py
tests/integration/: test_carbon_mass_balance.py  test_gilbert_replication.py  test_goldman_delta.py  test_goldman_replication.py  test_propane_benchmark.py  test_rmg_smoke.py  test_rmg_vs_vector.py  test_stage2_preflight.py  test_workflow.py
tests/performance/: bench_comparison.py  bench_qirn.py  bench_rmg_isotope.py
tests/unit/: test_chemistry_resolver.py  test_isotope_changes.py  test_isotope_graph.py  test_isotopologue_analysis.py  test_isotopologue_engine.py  test_isotopologue_kie.py  test_isotopologue_species.py  test_providers.py  test_rmg_bridge.py  test_visualization.py
