[project]
name = "rpfr-gui"
version = "0.1.0"
description = "Isotope fractionation analysis tool for Reduced Partition Function Ratios (RPFR)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Simon Andren"}
]
keywords = ["isotope", "chemistry", "fractionation", "rdkit", "computational-chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "h5py>=3.10",
    "pandas>=2.0",
    "numpy>=1.24",
    "rdkit>=2023.9.1",
    "networkx>=3.0",
    "ipywidgets>=8.0",
    "matplotlib>=3.7",
    "plotly>=5.14",
    "tqdm>=4.65",
    "py3dmol>=2.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "ipython>=8.12",
    "jupyterlab>=4.0",
]

parquet = [
    "polars>=0.19",
    "pyarrow>=13.0",
]

graph-viz = [
    "ipycytoscape>=1.3",
]

all = [
    "rpfr-gui[dev,parquet,graph-viz]",
]

[project.urls]
Homepage = "https://github.com/simonandren/isotope-informed-crn"
Repository = "https://github.com/simonandren/isotope-informed-crn"
Issues = "https://github.com/simonandren/isotope-informed-crn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpfr_gui"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=rpfr_gui --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/rpfr_gui"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["F401", "F811"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "h5py.*",
    "ipywidgets.*",
    "ipycytoscape.*",
    "plotly.*",
]
ignore_missing_imports = true
